2004-06-16  Adam Fedor  <fedor@gnu.org>

	* GNUmakefile (distclean): Remove duplicate GNUmakefile removal
	Don't remove Documentation/GNUmakefile

	* Documentation/machines.texi: Update

	* Instance/resource-set.make (internal-resource_set-uninstall_):
	Remove directories after removing files.

Tue Jun 15 09:49:16 2004  Nicola Pero <n.pero@mi.flashnet.it>

	* GNUstep.sh.in: Detect if we're running under zsh, and if so, if
	the shwordsplit option is not set, set it for the duration of the
	script, then restore it to its original value at the end.  This
	seems to fix setting the paths on zsh.
	
2004-06-14  Adam Fedor  <fedor@gnu.org>

	* GNUmakefile.in (uninstall): Remove all installed files (still
	need to do directories).

2004-06-09  Adam Fedor  <fedor@gnu.org>

	* Version 1.9.2
	* Documentation/GNUmakefile: Include ../Version
	* Documentation/README.Cygwin: minor updates.
	* Documentation/gnustep-howto.texi, Documentation/machines.texi: Update

2004-06-05  Adam Fedor  <fedor@gnu.org>

	* ld_lib_path.[c]sh: Allow seting of GNUstep framework location on
	Mac OS X for all library combos (patch from Quentin Mathe
	<gnustep-quentin@club-internet.fr>).

	* Instance/application.make ($(APP_INFO_PLIST_FILE)): Don't fail
	if plmerge does not work.

	* Documentation/README.Cygwin: Update
	* Documentation/machines.texi: Add Mac OS X section.
	* Documentation/news.texi: Update.

Tue Jun  1 15:43:45 BST 2004  Riccardo Mottola <rollei@tiscalinet.it>

	* debugapp.in (appname): Fixed escaping of --args argument to work
	with an alien grep / os.

2004-05-17 Richard Frith-Macdonald <rfm@gnu.org>

        * Instance/Documentation/autogsdoc.make: Simplify rules.  Avoid
	dependency on existence of documentation subdirectory by relying on
	new autogsdoc feature (it now creates the subdirectory if necessary).
	This prevents possible recursion in make process.

2004-05-07 Richard Frith-Macdonald <rfm@gnu.org>

	* Master/rules.make: Pass 'operation' to instances in
	'GNUSTEP_OPERATION'